--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon js,ejs",
+    "start": "nodemon -e js,ejs",
     "start:prod": "node index.js",
     "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
-    "test": "NODE_ENV=test jest --detectOpenHandles",
+    "test": "jest",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -16,8 +16,19 @@
       "prettier --write ."
     ]
   },
-  "author": "",
+  "author": "Vineeth",
   "license": "ISC",
+  "devDependencies": {
+    "cheerio": "^1.0.0-rc.12",
+    "eslint": "^8.25.0",
+    "husky": "^8.0.1",
+    "jest": "^29.2.0",
+    "lint-staged": "^13.0.3",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
+    "sequelize-cli": "^6.5.1",
+    "supertest": "^6.3.0"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "connect-ensure-login": "^0.1.1",
@@ -25,23 +36,14 @@
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
+    "engine": "^1.0.0",
+    "engines": "^0.4.0",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
-    "sequelize": "^6.23.0",
+    "sequelize": "^6.25.1",
     "tiny-csrf": "^1.1.3"
-  },
-  "devDependencies": {
-    "cheerio": "^1.0.0-rc.12",
-    "eslint": "^8.24.0",
-    "husky": "^8.0.1",
-    "jest": "^29.1.1",
-    "lint-staged": "^13.0.3",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.7.1",
-    "sequelize-cli": "^6.4.1",
-    "supertest": "^6.2.4"
   }
 }
